# computerVison-Projects

./: README.md
Project1_Video_special_effects/: CMakeLists.txt  faceDetect.h  filter.cpp  filter.h  imgDisplay.cpp  main.cpp  readme.txt  timeBlur.cpp  vidDisplay.cpp
Project2_Content_based_Image_Retrieval/: CMakeLists.txt  Project2.code-workspace  Readme.txt  main.cpp  matching.cpp  matching.h
Project5_Recognition_using_Deep_Networks/:  DeepNetwork.py  AnalyzeLayer.py  DeepNetwork.pth  DeepNetwork.py  Extension_1.py  Extension_2.py  ReadME.txt  Task4_Design.py  TestModel.py  TestwithNewInput.py  TrainGreekLetter.py  testGreek.pth
project3_Real-time_2-D_Object_Recognition/: CMakeLists.txt  README.md  main.cpp  recognition.cpp  recognition.h
project3_Real-time_2-D_Object_Recognition/Proj03Examples/: IMG_8225.heic
project4_ Calibration and_Augmented_Reality/: CMakeLists.txt  DetectRobustFeatures.cpp  Draw3Dobject.cpp  Readme.txt  calibrate.cpp  calibrate.h  main.cpp  newProgram.cpp  task4AndTask5.cpp
